--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -6,5 +6,35 @@
 @layer base {
   :root {
     --radius: 0.5rem
+  
   }
 }
+
+
+/*
+body {
+  font-family: "Raleway", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+}*/
+
+/*
+body {
+  font-family: "Oswald", serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  
+
+}*/
+
+/*
+body {
+  font-family: "Advent Pro", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: <weight>;
+  font-style: normal;
+  font-variation-settings:
+    "wdth" 100;
+}*/
