--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -2,11 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-
 @layer base {
   :root {
-    --radius: 0.5rem
-  
+    --radius: 0.5rem,
   }
 }
 
