--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -9,13 +9,13 @@
 }
 
 
-/*
+
 body {
   font-family: "Raleway", serif;
   font-optical-sizing: auto;
   font-weight: <weight>;
   font-style: normal;
-}*/
+}
 
 /*
 body {
